--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
 <div>
   <div class="backimage"></div>
 </div>
+<br>
 <div class="wrapper3">
-  <div class="h_iframe">
-    <iframe name="iframe1" frameborder="0" allowfullscreen></iframe>
-  </div>
+    <iframe name="iframe1" style="position: absolute; height: 100%; width: 90%; border: none">></iframe>
 </div>
+
 <!-- Google Analystics -->
   <script type="text/javascript">
   </script>
